# confined

./: .travis.yml  LICENSE  MANIFEST  MANIFEST.in  README.md  README.rst  README.txt  pyproject.toml  pyproject.toml_future  requirements.txt  setup.py
confined/: __init__.py  __main__.py  check_arg.py  test_check_arg.py  test_valid.py
scripts/: confineds
